[package]
name = "scru64-test"
version = "0.1.0"
authors = ["LiosK <contact@mail.liosk.net>"]
license = "Apache-2.0"
edition = "2021"
description = "SCRU64 Generator Tester"
repository = "https://github.com/scru64/gen_test"
categories = ["command-line-utilities", "development-tools"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
